--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,11 @@
 allprojects {
     repositories {
+//        maven { url 'https://maven.aliyun.com/repository/google' }
+//        maven { url 'https://maven.aliyun.com/repository/jcenter' }
+//        maven {
+//            allowInsecureProtocol = true
+//            url 'https://maven.aliyun.com/nexus/content/groups/public'
+//        }
         google()
         mavenCentral()
     }
