--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  get:
+  dio: ^5.7.0
+  shared_preferences:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
